# slpd-lite

./: MAINTAINERS  Makefile.am  OWNERS  README.md  bootstrap.sh  configure.ac  endian.hpp  groups  main.cpp  meson.build  project.config  slp.cpp  slp.hpp  slp_message_handler.cpp  slp_meta.hpp  slp_parser.cpp  slp_server.cpp  slp_server.hpp  slp_service_info.hpp  sock_channel.cpp  sock_channel.hpp
test/: slp_message_handler_test.cpp  slp_parser_test.cpp  test-suite.py
